--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,23 +1,23 @@
-.btn-blue{
+.btn-redish{
 	background-color: #FF7E7D;
 	color: white;
 	padding: 15px 20px;
 	border-radius: 4px;
 }
 
-.btn-blue#btn-header{
+.btn-redish#btn-header{
 	background-color: #FFFFFF;
 	color: black;
 
 }
 
-.btn-blue#btn-header:hover{
+.btn-redish#btn-header:hover{
 	background-color: #FF7E7D;
 	color: white;
 
 }
 
-.btn-blue:hover{
+.btn-redish:hover{
 	background-color: black;
 	color:white;
 }
