--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,9 @@
 @import url("components/nav-bar.css");
 @import url("components/slider.css");
 @import url("components/profile.css");
-@import url("components/services.css");
+@import url("components/black-box.css");
 @import url("components/s-card.css");
+@import url("components/list.css");
 
 
 
