--- a/css/components/card.css
+++ b/css/components/card.css
@@ -8,10 +8,7 @@
 	margin: 10px 10px;
 	flex-basis: 250px;
 	flex-grow: 1;
-
-
 }
-
 
 .card img{
 	height: 70px;
@@ -28,4 +25,10 @@
 .cards{
 	display: flex;
 	flex-wrap: wrap;
+}
+
+#summary p{
+	line-height: 1.5;
+	font-size: 18px;
+	font-family: montserrat;
 }
