--- a/css/components/card.css
+++ b/css/components/card.css
@@ -3,11 +3,16 @@
 	align-items: center;
 	padding: 20px;
 	justify-content: space-between ;
-	box-shadow: 0px 10px 30px rgba(0,0,0,0.2);
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
 	border-radius: 6px;
 	margin: 10px 10px;
 	flex-basis: 250px;
 	flex-grow: 1;
+	border: 0.5px solid rgba(0,0,0,0.1);
+}
+
+.card:hover{
+	box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
 }
 
 .card img{
