--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -18,3 +18,13 @@
 	opacity: 0.8;
 	margin-bottom: 4rem;
 }
+
+/*consulting page*/
+
+#consulting-banner{
+	background-image: linear-gradient(225deg, rgba(0,0,0,0.4) , rgba(0,0,0,0.4)), url("../../images/consulting-banner.jpg");
+}
+
+#consulting-banner h2{
+	opacity: 1;
+}
