--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -12,11 +12,10 @@ nav{
 	text-transform: uppercase;
 	font-size: 1.6rem;
 	background-color: black;
+	padding-bottom: 1rem;
 	padding-top: 1rem;
 	padding-left: 3rem;
 	padding-right: 3rem;
-
-
 }
 
 
