--- a/css/components/s-card.css
+++ b/css/components/s-card.css
@@ -1,16 +1,18 @@
 .justify{
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
-	align-items: center;
+	align-items: top;
 }
 
 .s-card{
 	height: 500px;
-	width: 17%;
-	margin: 0px 5px;
+	width: 250px;
+	margin: 5px 5px;
 	display: block;
-	border-width: 0.5px;
 	border-style: solid;
+	border-width: 0.5px;
+	border-color: white;
 }
 
 
@@ -56,4 +58,5 @@
 .s-card-body p{
 	line-height: 1.3;
 	color: white;
+	margin: 10px 10px;
 }
